Links externos são imagens agora, posicionamento dos elementos otimizado

--- a/index.html
+++ b/index.html
@@ -16,110 +16,118 @@
 
         <nav>
             <ul>
-                <li class="nav"><a class ="option" href="#texto"><strong> Minha jornada de aprendizado </strong></a></li>
-                <li class="nav"><a class ="option" href="#licoes_aprendidas"><strong>O que eu já aprendi</strong></a></li>
-                <li class="nav"><a class ="option" href="#licoes_a_aprender"><strong>O que quero aprender</strong></a></li>
-                <li class="nav"><a class ="option" href="#rodape"><strong>Contato</strong></a></li>
+                <li class="nav"><a class="option" href="#texto"><strong> Minha jornada de aprendizado </strong></a></li>
+                <li class="nav"><a class="option" href="#licoes_aprendidas"><strong>O que eu já aprendi</strong></a>
+                </li>
+                <li class="nav"><a class="option" href="#licoes_a_aprender"><strong>O que quero aprender</strong></a>
+                </li>
+                <li class="nav"><a class="option" href="#rodape"><strong>Contato</strong></a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="foto">
-        <img id="minha_foto" src="./images/MinhaFoto.jpg"
-            alt="Uma foto profissional em preto e branca de Emanoel Cristhian.">
-    </section>
 
-    <article class="texto">
-        <article id="lado-esquerdo">
-            Sim, sou um <strong>Tryber</strong>, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido
-            muito com essa
-            escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás
-            com o meu EU hoje.
-            Aprendi a usar o <strong>GitHub de forma profissional</strong>; Aprendi que existe uma <strong>semântica
-                HTML</strong> e que isso ajuda muito
-            com os motores de buscas; Agora sei que meus sites devem <strong>alcançar todas as pessoas
-                possíveis</strong>. Enfim, ainda tenho
-            mais coisas para aprender, até mais!
-        </article>
+    <img id="minha_foto" src="./images/MinhaFoto.jpg"
+        alt="Uma foto profissional em preto e branca de Emanoel Cristhian.">
 
-        <section id="lado-direito">
-            <aside>
-                <i>
-                Sou tryber com orgulho, aqui eu estou construindo desde o início um mindset de um verdadeiro
-                profissional
-                desenvolvedor. Passando desde o Shell até o deploy de um site.
-            </i>
-            </aside>
-        </section>
 
-        <table class="tabela">
-            <thead>
-                <tr>
-                    <th colspan="2">Jornada Trybe</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="bloco_atual">Fundamentos do Desenvolvimento Web</td>
-                    <td>Desenvolvimento Front-end</td>
-                </tr>
-                <tr>
-                    <td>Desenvolvimento Back-end</td>
-                    <td>Ciência da Computação</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Soft Skills</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Carreira</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Software Engineering - The Real Life</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Agile</td>
-                </tr>
-            </tbody>
-        </table>
+    <article id="lado-esquerdo">
+        Sim, sou um <strong>Tryber</strong>, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido
+        muito com essa
+        escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás
+        com o meu EU hoje.
+        Aprendi a usar o <strong>GitHub de forma profissional</strong>; Aprendi que existe uma <strong>semântica
+            HTML</strong> e que isso ajuda muito
+        com os motores de buscas; Agora sei que meus sites devem <strong>alcançar todas as pessoas
+            possíveis</strong>. Enfim, ainda tenho
+        mais coisas para aprender, até mais!
     </article>
 
-    <h3>Lições Aprendidas</h3>
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Shell</li>
-        <li>Como começar a construir um linkedin profissional</li>
-        <li>Como que a internet funciona</li>
-        <li>Versionamento com o GIT</li>
-        <li>Fazer pull, push num repositório remoto no GitHUb</li>
-        <li>Iniciar uma criação de portfólio</li>
-        <li>Boas práticas no trabalho em equipe com o GIT</li>
-        <li>Html</li>
-        <li>CSS</li>
-    </ol>
+    <aside id="lado-direito">
+        <i>
+            "Sou tryber com orgulho, aqui eu estou construindo desde o início um mindset de um verdadeiro
+            profissional
+            desenvolvedor. Passando desde o Shell até o deploy de um site."
+        </i>
+    </aside>
 
-    <h3>Lições a Aprender</h3>
-    <ul id="licoes_a_aprender">
-        <li>Java Script</li>
-        <li>Banco de dados</li>
-        <li>Como ter uma comunicação acertiva e profissional</li>
-        <li>Melhores práticas no mercado</li>
-        <li>O processo de criação de uma aplicação</li>
-        <li>Como me portar diante de situações corriqueiras no dia de uma pessoa programadora</li>
-        <li>React</li>
-        <li>Aprender a aprender</li>
-        <li>Como criar um network de sucesso</li>
-        <li>Soft Skils para esse mercado</li>
-    </ul>
 
+    <table class="tabela">
+        <thead>
+            <tr>
+                <th colspan="2">Jornada Trybe</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="bloco_atual">Fundamentos do Desenvolvimento Web</td>
+                <td>Desenvolvimento Front-end</td>
+            </tr>
+            <tr>
+                <td>Desenvolvimento Back-end</td>
+                <td>Ciência da Computação</td>
+            </tr>
+            <tr>
+                <td colspan="2">Soft Skills</td>
+            </tr>
+            <tr>
+                <td colspan="2">Carreira</td>
+            </tr>
+            <tr>
+                <td colspan="2">Software Engineering - The Real Life</td>
+            </tr>
+            <tr>
+                <td colspan="2">Agile</td>
+            </tr>
+        </tbody>
+    </table>
+    </article>
+
+    <section id="lista1">
+        <h3>Lições Aprendidas</h3>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Shell</li>
+            <li>Como começar a construir um linkedin profissional</li>
+            <li>Como que a internet funciona</li>
+            <li>Versionamento com o GIT</li>
+            <li>Fazer pull, push num repositório remoto no GitHub</li>
+            <li>Iniciar uma criação de portfólio</li>
+            <li>Boas práticas no trabalho em equipe com o GIT</li>
+            <li>Html</li>
+            <li>CSS</li>
+        </ol>
+    </section>
+
+    <section id="lista2">
+        <h3>Lições a Aprender</h3>
+        <ul id="licoes_a_aprender">
+            <li>Java Script</li>
+            <li>Banco de dados</li>
+            <li>Como ter uma comunicação acertiva e profissional</li>
+            <li>Melhores práticas no mercado</li>
+            <li>O processo de criação de uma aplicação</li>
+            <li>Como me portar diante de situações corriqueiras no dia de uma pessoa programadora</li>
+            <li>React</li>
+            <li>Aprender a aprender</li>
+            <li>Como criar um network de sucesso</li>
+            <li>Soft Skils para esse mercado</li>
+        </ul>
+    </section>
 
     <footer id="rodape">
-        <h3 class="rodape_titulo">Contato</h3>
-        <ul class="rodape_list"> 
-            <li><a target="_blank" href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
-            <li><a target="_blank" href="https://github.com/EmanoelCristhian">GitHub</a></li>
-            <li>Ou me manda um e-mail:<a target="_blank" href="mailto:emanuelleaomarinho@gmail.com">emanuelleaomarinho@gmail.com</a>
-            </li>
-        </ul>
+        <h4 class="rodape_titulo">Contato</h4>
+        <div class="redes-sociais">
+            <a class="redes-sociais" target="_blank" href="https://www.linkedin.com/in/emanoel-leao/">
+                <img width="50px" alt="Imagem icone da rede social Linkedin" src="./images/sinal-do-linkedin.png">
+            </a>
+            <a class="redes-sociais" target="_blank" href="https://github.com/EmanoelCristhian">
+                <img width="50px" alt="Imagem icone do GitHub" src="./images/github.png">
+            </a>
+            <a class="redes-sociais" target="_blank" href="mailto:emanuelleaomarinho@gmail.com">
+                <img width="50px" alt="Imagem icone do e-mail" src="./images/o-email.png">
+            </a>
+        </div>
     </footer>
 </body>
 
