--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </aside>
     <aside class="aside-right lado-direito">
         <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
-        <section>
+        <section id="aprendizado">
             <h2>Aprendizado</h2>
-            <p>Denomina-se cultura punk estilos dentro da subcultura e tribo urbana que possuem características comuns àquelas ditas punk, como por exemplo o princípio de autonomia do faça-você-mesmo, o interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão da cultura.</p>
+            <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, por exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão cultural.</p>
         </section>
     </aside>
 
