Adicionando listas uma ao lado da outra

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
      <section><aside class ="lado-direito"><h3> Expectativas </h3>Lorem ipsum dolor sit amet leo tempus tortor dictum pellentesque quis felis non sem at eget sit nec nec praesent aliquam lacinia fermentum auctor potenti purus vestibulum amet integer lacus justo eget purus volutpat gravida ad donec at justo quisque porta nec per viverra vivamus rhoncus aenean justo suspendisse sem blandit congue a platea laoreet morbi mollis laoreet senectus vehicula hendrerit ante cursus cras quis rhoncus potenti suspendisse faucibus enim molestie class hendrerit est sit nunc consectetur ultrices consectetur vestibulum a turpis porta nisi lacinia sagittis mi aliquet vivamus vulputate nulla lobortis vel diam arcu iaculis nisi vestibulum lacinia consectetur malesuada faucibus facilisis per vel consequat quisque senectus imperdiet quis inceptos scelerisque imperdiet lacus dui mi vehicula pharetra maecenas dictum.
         </aside></section>
                 <ol id="licoes_aprendidas"><h3> Lições aprendidas</h3>
-                        <li>ehsgf</li>
-                        <li>wuefhj</li>
-                        <li>orwigj</li>
-                        <li>origel</li>
-                        <li>rlgjfgsg</li>
-                        <li>asrgvdffd</li>
-                        <li>oewigjhlkfdv</li>
-                        <li>sjghdfjg</li>
-                        <li>gasjhdjksndffkvc</li>
-                        <li>afsogjklkgf</li>
+                        <li>Bash</li>
+                        <li>Unix</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>HTML</li>
+                        <li>HTML Semantico</li>
+                        <li>CSS</li>
+                        <li>Terminal</li>
+                        <li>Síndrome do impostor</li>
+                        <li>Pitch</li>
                 </ol>
 
                 <ul id="licoes_a_aprender"><h3>Lições a aprender</h3>
