--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
         </article>
       </div>
       <div id="div_section">
-        <section id="passagem_aprendizado" class="lado-direito preenchimento">
-          <h3>Minha evolução HTML / CSS</h3><aside><img id="sucesso" src="images/sucesso.png" alt=""></aside><p>Até pouco tempo atrás minhas paginas eram estruturadas de forma amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma grande evolução.</p><p>&#128640<em>#goTrybe</em></p>
-        </section>
+        <aside id="passagem_aprendizado" class="lado-direito preenchimento">
+          <h3>Meu aprendizado HTML / CSS</h3>
+          <section>
+            <img id="sucesso" src="images/sucesso.png" alt=""><p>Até pouco tempo atrás minhas paginas eram estruturadas de forma amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma grande evolução.</p><p>&#128640<em>#goTrybe</em></p>
+          </section>
+        </aside>
       </div>
     </section>
     <aside id="sobre" class="preenchimento">
