Final Pagination-Part5

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <li>SQL</li>
         </ul>
     </aside>
-    <aside class="aside-right lado-direito">
+    <aside class="aside-right lado-direito" id="aprendizado">
         <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
-        <section id="aprendizado">
+        <section>
             <h2>Aprendizado</h2>
-            <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, por exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão cultural.</p>
+            <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão.</p>
         </section>
     </aside>
 
