Testando ferramentas soluçoes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </p>
        </section>
       <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
-      <section>
+      <div>
         <table id="table">
           <tr>
             <th id="id_table"> Virtudes para Ingressar e Estudar na Trybe </th>
@@ -74,7 +74,7 @@
             <td> Força de Vontade | Garra | Foco | Disciplina | Dedicação | Determinação | Empenho | Perseverânça | Sede de Conhecimento | Gosto por Novos Desafios | Interesse pela área de Tecnologia | Ser Estudioso  </td>
           </tr>
         </table>
-      </section>
+      </div>
     </div>
     <!--------------------------------------------- Seção-05: Link Externo ------------------------------------------------->
     <nav>
