--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bruna (Projeto)</title>
+<body>
 </head>
 <link rel="stylesheet" href="style.css" class="css">
 <header id="cabecalho">
     <h1 id="titulo">Bruna Ferreira</h1>
 </header>
-<body>
+
 <figure>
     <img src="rsz_brunaferreira.jpg" id="minha_foto" width="150px" alt="Minha Foto">
 </figure>
@@ -50,7 +51,7 @@
     </ul>
 </section>
 <section>
-    <table align="center" border="2" width="40%" bgcolor="pink">
+    <table align="center" border="2" width="40%" bgcolor="white">
         <tr>
             <th>Nome</th>
             <th>Idade</th>
