Melorando o projeto no code climate

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         alt="Uma foto profissional em preto e branca de Emanoel Cristhian.">
 
 
-    <article id="lado-esquerdo">
+    <article class="lado-esquerdo">
         Sim, sou um <strong>Tryber</strong>, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido
         muito com essa
         escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás
@@ -43,7 +43,7 @@
         mais coisas para aprender, até mais!
     </article>
 
-    <aside id="lado-direito">
+    <aside class="lado-direito">
         <em>
             "Sou tryber com orgulho, aqui eu estou construindo desde o início um mindset de um verdadeiro
             profissional
