Resolvendo de novo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             </article>
 
             <aside class="right-side">
-                <p>A coisa mais fácil é falar sobre a Trybe, pois é um mix de emoções. Aqui vc encontra pessoas com os mesmos proprósitos que si ajudam o tempo todo. Para mim o ensino de qualidade si da através de; Mentoria e Metodologia. E nesses 2 requisitos a Trybe é minha primeira escolha.</p>
+                <p>A coisa mais fácil é falar sobre a Trybe, pois é um mix de emoções. Aqui vc encontra pessoas com os mesmos proprósitos que si ajudam o tempo todo. Para mim o ensino de qualidade si da através de; Mentoria e Metodologia.</p> 
+                <!-- texto que sobrou // E nesses 2 requisitos a Trybe é minha primeira escolha. -->
             </aside>
         </section>
 
