--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
         </section>
     </aside>
 
+    <section id="aprendizado">Aprendizado</section>
+
     <article class="article lado-esquerdo">
         Carpe diem é parte da frase latina carpe diem quam minimum credula postero (literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída de uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções possíveis: "colhe o dia" (tradução literal), "desfruta o presente", "vive este dia", "aproveita o dia" ou "aproveita o momento". O poeta latino exorta sua brinterlocutora, Leuconoe, a desfrutar do prazer que a vida oferece, a cada momento de aproveitar o que há de bom em cada instante, já que o futuro é incerto.
     </article>
-    <section id="aprendizado"></section>
     <nav class="nav">
         <table border="4px" align="center" >
             <tr>
