Correção de texto

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
       <tr>
         <td>
           <article class="lado-esquerdo">
-            Deixarei aqui um breve resumo sobre meu começo na Trybe. Depois de muito tempo, resolvi finalmente mudar de carreira e partir para uma área que gosto muito, e para minha alegria pude estudar aqui na Trybe,  que além de capacitar tecnicamente seus estudantes, os ajuda a desenvolver habilidades sócio comportamentais, e isso fez ficar ainda mais animado com o método de ensino que eles praticam. Acredito que devido ao processo seletivo da Trybe.
+            Deixarei aqui um breve resumo sobre meu começo na Trybe. Depois de muito tempo, resolvi finalmente mudar de carreira e partir para uma área que gosto muito, e para minha alegria pude estudar aqui na Trybe,  que além de capacitar tecnicamente seus estudantes, os ajuda a desenvolver habilidades sócio comportamentais, e isso fez ficar ainda mais animado com o método de ensino que eles praticam.
           </article>
         </td>
         <td>
           <aside class="lado-direito">
-            Só um dos vários momentos na trybe. Enquanto eu realizava um dos exercícios propostos, o código simplesmente parou funcionar, depois de um tempo e sem saber mais o que fazer,veio a iluminação, eu havia trocado uma vírgula por ponto.
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
           </aside>
         </td>
       </tr>
