adicionando um link externo ao projeto

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <aside> Quando começamos o curso, eu nunca havia trabalhado com linhas de comando e, à medida que começamos ao utilizar na trybe, eu pude perceber como nós conhecemos pouco sobre a operação de sistemas de uma forma mais poderosa.
     </aside>
     <footer id="rodape" >
+        <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao&utm_content=anuncio01&gclid=Cj0KCQiAzZL-BRDnARIsAPCJs73CnIeKsua9AUic9IH4V1J8i0IIcSf-CO2K7zJooaB2nemCRFA1SscaAkbYEALw_wcB" target="_blank"> Inscreva-se naTrybe!!!
+
+        </a>
 
     </footer>
 </body>
