Resolvendo de novo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe</h1>
+        <nav>
+            <ul>
+                <li>Sobre mim</li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -54,15 +59,15 @@
         <!-- Aqui acaba a repeticao -->
         <section>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <table>
-            <tr>
-                <th>agora</th>
-                <th>depois</th>
-            </tr>
-            <tr>
-                <th>#VQV</th>
-                <th>Agora</th>
-            </tr>
+            <table id="table-atribute">
+                <tr>
+                    <th>agora</th>
+                    <th>depois</th>
+                </tr>
+                <tr>
+                    <th>#VQV</th>
+                    <th>Agora</th>
+                </tr>
             </table>
         </section>
 
