--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="style.css">
-      <link rel="shortcut icon" href="images/trybe.png">
-      <title>Projeto HTML & CSS | Cleber Teixeira</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/trybe.png">
+    <title>Projeto HTML & CSS | Cleber Teixeira</title>
   </head>
   <body>
     <header id="cabecalho" class="destaque gradiente">
       <h1 id="titulo">Primeiro Projeto - HTML & CSS - Trybe! &#128640;</h1>
+      <nav id="navegacao">
+        <table>
+          <tr>
+            <td><a class="trybe" href="https://www.linkedin.com/in/cleberlopesteixeira" target="_blank"><img id="linkedin" alt="linkedin" src="images/linkedin.png"></a></td>
+            <td><a href="https://github.com/cleber-teixeira" target="_blank"><img id="gitHub" src="images/gitHub.png" alt="gitHub"></a></td>
+            <td><a class="trybe" href="https://blog.betrybe.com/" target="_blank"><img id="trybe" src="images/trybe.png" alt="blob_trybe"></a></td>
+          </tr>
+        </table>
+      </nav>
     </header>
     <img id="minha_foto" class="destaque" src="images/Cleber.png" alt="Cleber">
     <img id="pc" class="preenchimento" src="images/pc.png" alt="">
@@ -49,7 +58,6 @@
     </section>
     <section>
       <h2 class="subtitulo">Minhas Experiências</h2>
-      <div>
         <article id="aprendizado" class="lado-esquerdo preenchimento" >
           <h3>Minha experiência com a Trybe</h3>
           <p>
@@ -60,15 +68,10 @@
             <em>Esta é a Trybe!</em> &#128526;&#128077;
           </p>
         </article>
-      </div>
-      <div id="div_section">
-        <aside id="passagem_aprendizado" class="lado-direito preenchimento">
-          <h3>Meu aprendizado HTML / CSS</h3>
-          <section>
+        <aside id="meu_aprendizado" class="lado-direito preenchimento">
+          <h3>Minha evolução HTML / CSS</h3>
             <img id="sucesso" src="images/sucesso.png" alt=""><p>Até pouco tempo atrás minhas paginas eram estruturadas de forma amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma grande evolução.</p><p>&#128640<em>#goTrybe</em></p>
-          </section>
         </aside>
-      </div>
     </section>
     <aside id="sobre" class="preenchimento">
       <h3 id="title_aside">Sobre mim:</h3>
@@ -95,15 +98,6 @@
         </tr>
       </table>
     </aside>
-    <nav id="navegacao">
-      <table>
-        <tr>
-          <td><a class="trybe" href="https://www.linkedin.com/in/cleberlopesteixeira" target="_blank"><img id="linkedin" alt="linkedin" src="images/linkedin.png"></a></td>
-          <td><a href="https://github.com/cleber-teixeira" target="_blank"><img id="gitHub" src="images/gitHub.png" alt="gitHub"></a></td>
-          <td><a class="trybe" href="https://blog.betrybe.com/" target="_blank"><img id="trybe" src="images/trybe.png" alt="blob_trybe"></a></td>
-        </tr>
-      </table>
-    </nav>
     <footer id="rodape" class="destaque gradiente"><em>Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09</em> &#9996;&#128640;</footer>
   </body>
 </html>
