Alterando para passar na questao 8 e 9.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       </ul>
       <br>
       <article id="artigo">
-        <p><strong>Sobre meu aprendizado:</strong>
-        Iniciei meus estudos na Trybe em 09 de novembro de 2020. Após dois dias de fantásticos “welcome days” onde a Trybe nos foi apresentada por diversos funcionários, inclusive até pelo seu dono, todos muito simpáticos e com enormes sorrisos em suas faces. Estes dois dias foram as nossas boas vindas, e foram muito bons.<br>Desde então, já se passaram três semanas. Três semanas de muito aprendizado, onde passamos por uma introdução bem básica ao Unix até aprendermos HTML e CSS. Um início de jornada muito promissor e que mostra que a jornada será única, produtiva e muito valiosa.</p>
+        <p>Sobre meu aprendizado: 
+        Iniciei meus estudos na Trybe em 09 de novembro de 2020. Após dois dias de fantásticos “welcome days” onde a Trybe nos foi apresentada por diversos funcionários, inclusive até pelo seu dono, todos muito simpáticos e com enormes sorrisos em suas faces. Estes dois dias foram as nossas boas vindas, e foram muito bons.<br>Desde então, já se passaram três semanas de muito aprendizado, onde passamos por uma introdução bem básica ao Unix até aprendermos HTML e CSS. Um início de jornada muito promissor e que mostra que a jornada será muito valiosa.</p>
       </article>
       <aside id="aside">
-        <p><strong>Uma passagem de meu aprendizado:</strong>
+        <p>Uma passagem de meu aprendizado: 
         Certa vez durante meu aprendizado passei pelo desespero de assistir uma aula inteira sem áudio pois tive problemas com meu linux. Depois assisti à aula gravada e deu tudo certo.</p>
       </aside>
       <nav>
