--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </table>
     <br>
     <section>
-        <article class="lado-esquerdo">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</article>
-        <aside class="lado-direito">Lorem ipsm Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</aside>
+        <article class="lado-esquerdo">O meu aprendizado na trybe nessas 3 semanas tem sido bastante recompensador, principalmente pelos desafios e exercicios passados pela plataforma. É incrível o tanto que aprendi em tão pouco tempo, algo que por si só ou por outra plataforma não seria possível. E o melhor de tudo é saber que essa frequência de aprendizado na trybe vai ser do começo ao fim.</article>
+        <aside class="lado-direito">Conteúdos aprendidos até a realização deste projeto: Primeira semana sobre Unix, Bash e Shell, a segunda sobre Git, GitHub e Internet e a terceira com Introdução à HTML e CSS.</aside>
     </section>
     <footer id="rodape">Página criada por Lucas Henrique da Silva Brito</footer>
 </body>
