--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned | Trybe</h1>
         <nav>
-            <a href="">Home</a>
-            <a href="">Login</a>
+            <a href="#topo">Home</a>
+            <a href="#aprendizado">Aprendizado</a>
         </nav>
     </header>
+    <section id="topo"></section>
     <br> <br> <br> <br> <br>
     <img id="minha_foto" src="pictures/perfil.jpeg" alt="Foto de Perfil">
     <br>
@@ -73,7 +74,7 @@
         </tr>
     </table>
     <br>
-    <section>
+    <section id="aprendizado">
         <article class="lado-esquerdo">O meu aprendizado na trybe nessas 3 semanas tem sido bastante recompensador, principalmente pelos desafios e exercicios passados pela plataforma. É incrível o tanto que aprendi em tão pouco tempo, algo que por si só ou por outra plataforma não seria possível. E o melhor de tudo é saber que essa frequência de aprendizado na trybe vai ser do começo ao fim.</article>
         <aside class="lado-direito">Conteúdos aprendidos até a realização deste projeto: Primeira semana sobre Unix, Bash e Shell, a segunda sobre Git, GitHub e Internet e a terceira com Introdução à HTML e CSS.</aside>
     </section>
