Correçao do requisito 9.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>
+      body {
+        background-image: url("background_tec.jpg");
+      }
+    </style>
     <link rel="shortcut icon" href="images/trybe.png">
     <title>Projeto HTML & CSS | Cleber Teixeira</title>
   </head>
@@ -21,10 +26,10 @@
       </nav>
     </header>
     <img id="minha_foto" class="destaque" src="images/Cleber.png" alt="Cleber">
-    <img id="pc" class="preenchimento" src="images/pc.png" alt="">
+    <img id="pc" class="base" src="images/pc.png" alt="">
     <section>
       <h2 class="subtitulo">Meus Aprendizados</h2>
-      <div id="lista1" class="lista preenchimento">
+      <div id="lista1" class="lista base">
         <h3>Lições aprendidas:</h3>
         <ol id="licoes_aprendidas">
           <li>Zoom</li>
@@ -39,8 +44,8 @@
           <li>Empatia</li>
         </ol>
       </div>
-      <img id="l_aprendidas" class="preenchimento" src="images/aprendidas.png" alt="">
-      <div id="lista2" class="lista preenchimento">
+      <img id="l_aprendidas" class="base" src="images/aprendidas.png" alt="">
+      <div id="lista2" class="lista base">
         <h3>Lições a aprender:</h3>
         <ul id="licoes_a_aprender">
           <li>JavaScript</li>
@@ -58,22 +63,24 @@
     </section>
     <section>
       <h2 class="subtitulo">Minhas Experiências</h2>
-        <article id="aprendizado" class="lado-esquerdo preenchimento" >
+        <article id="aprendizado" class="lado-esquerdo base" >
           <h3>Minha experiência com a Trybe</h3>
           <p>
-            Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico.
+            Minha experiência junto a <strong>Trybe</strong> tem sido muito incrível, intenso, motivador, inspirador e muito rico.
             Aqui não aprendemos somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos também
             valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas,
             e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida.
             <em>Esta é a Trybe!</em> &#128526;&#128077;
           </p>
         </article>
-        <aside id="meu_aprendizado" class="lado-direito preenchimento">
-          <h3>Minha evolução HTML / CSS</h3>
-            <img id="sucesso" src="images/sucesso.png" alt=""><p>Até pouco tempo atrás minhas paginas eram estruturadas de forma amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma grande evolução.</p><p>&#128640<em>#goTrybe</em></p>
+        <aside id="meu_aprendizado" class="lado-direito base">
+          <h3>Minha evolução</h3>
+            <img id="sucesso" src="images/sucesso.png" alt="">
+            <p>A um tempo atrás minhas paginas eram muito simples. Hoje com duas semanas e meia de curso na <strong>Trybe</strong> eu percebo uma grande evolução.</p>
+            <p>&#128640<em>#goTrybe</em></p>
         </aside>
     </section>
-    <aside id="sobre" class="preenchimento">
+    <aside id="sobre" class="base">
       <h3 id="title_aside">Sobre mim:</h3>
       <table>
         <tr>
