--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 id="titulo">Lessons Learned | Trybe</h1>
         <nav>
             <a href="#topo">Home</a>
-            <a href="#aprendizado">Aprendizado</a>
+            <a href="#sobre">Sobre</a>
         </nav>
     </header>
     <section id="topo"></section>
@@ -74,7 +74,7 @@
         </tr>
     </table>
     <br>
-    <section id="aprendizado">
+    <section id="sobre">
         <article class="lado-esquerdo">O meu aprendizado na trybe nessas 3 semanas tem sido bastante recompensador, principalmente pelos desafios e exercicios passados pela plataforma. É incrível o tanto que aprendi em tão pouco tempo, algo que por si só ou por outra plataforma não seria possível. E o melhor de tudo é saber que essa frequência de aprendizado na trybe vai ser do começo ao fim.</article>
         <aside class="lado-direito">Conteúdos aprendidos até a realização deste projeto: Primeira semana sobre Unix, Bash e Shell, a segunda sobre Git, GitHub e Internet e a terceira com Introdução à HTML e CSS.</aside>
     </section>
