Ajuste do article e section lado a lado

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   </header>
   <div id="container">
     <main id="conteudo-principal">
-      <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
       <nav>
         <a href="https://github.com/EnioNicael" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com/in/enio-nicael/" target="_blank">Linkedin</a>
         <a href="https://www.instagram.com/enionicael/" target="_blank">Instagram</a>
       </nav>
+      <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
       <section>
-        <div id="lista-esquerda">
+        <div>
           <h2>Lições Aprendidas</h2>
           <ol id="licoes_aprendidas">
             <li>Inteligência emocional</li>
@@ -38,7 +38,7 @@
             <li>Organização</li>
           </ol>
         </div>
-        <div id="lista-direita">
+        <div>
           <h2>Lições a Aprender</h2>
           <ul id="licoes_a_aprender">
             <li>Javascript</li>
@@ -54,7 +54,7 @@
           </ul>
         </div>
       </section>
-      <article id="artigo">
+      <article id="artigo" class="lado-esquerdo">
         <h2>Primeiras semanas</h2>
         <p>Até aqui foram duas semanas intensas de muito estudo e aprendizagem
           onde aprendi habilidades que fazem parte de um processo ascendente pensado
@@ -64,7 +64,7 @@
           O processo de aprendizagem é bem consistente, através de aulas síncronas, assíncronas,
           plantões de ajuda e muita prática.</p>
       </article>
-      <section>
+      <section class="lado-direito">
         <h2>Softskills</h2>
         <aside>
           <p>Um ponto muito interessante que eu gostei muito foi sobre aprender softskills, que envolve o lado humano do aluno e não apenas habilidades técnicas. Habilidades
@@ -90,7 +90,7 @@
               <td>Pendente</td>
               <td>Pendente</td>
             </tr>
-          </tbody>
+          </tbody>  
         </table>
     </section>
   </div>
