--- a/index.html
+++ b/index.html
@@ -21,22 +21,19 @@
     <a id="link_externo" href="https://www.uol.com.br/" target="_blank">Uol Noticias</a>
       </nav>
     <main> 
-    <div class="container"> 
         <section>
-          <article class="item">
-        <p  
-        color:red;
-        font-family: sans-serif;
-        letter-spacing: 4px;
-        font-size: 20x; >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in rutrum augue, quis interdum eros. Vivamus quis nisi eget lorem efficitur faucibus vel id nunc. Nam tempus mollis elit at condimentum. Aenean lobortis id dui vel vestibulum. Donec a posuere neque. Morbi eget molestie ante, elementum vestibulum sapien. Maecenas vitae dapibus urna, ullamcorper vulputate dolor. Etiam sit amet ligula orci. Vivamus ultrices risus dui, in tincidunt leo imperdiet at. Sed sed massa congue ante bibendum feugiat.
+          <article>
+        <p>Minha caminhada na Trybe começou a pouco tempo, porem nesse pouco tempo muita coisa ja mudou, antes eu me lmebro que entrava 
+        em git hub para baixar mod de jogos e outros tipo de coisas mais independentes, hoje em dia sou eu quem esta subindo coisas para o git hub 
+        isso me deixa muio feliz pois em apenas 2 semanas ja consigo subir e manipular minha propria pagina web, tem sido superior as
+        minhas espectativas
         </p>
     </article>
     <section>
-        <aside class="item"> texto genericotexto genericotexto genericotexto generico texto genericotexto genericotexto genericotexto genericotexto genericotexto generico
+        <aside> texto genericotexto genericotexto genericotexto generico texto genericotexto genericotexto genericotexto genericotexto genericotexto generico
         </aside>
         </section>     
-        </div>
-        <section>
+         <section>
         <h2>tabela generica</h2>
     <table>
       <tr>
@@ -63,29 +60,28 @@
     </section>
     </section>
     <section></section>
-    <ol id="licoes_aprendidas">
-        <li>lição 01</li>
-        <li>lição 02</li>
-        <li>lição 03</li>
-        <li>lição 04</li>
-        <li>lição 05</li>
-        <li>lição 01</li>
-        <li>lição 02</li>
-        <li>lição 03</li>
-        <li>lição 04</li>
-        <li>lição 05</li>
+        <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git Hub</li>
+        <li>Html5</li>
+        <li>JavaScript</li>
+        <li>tabelas em JavaScript</li>
+        <li>manipulação de fonte em html</li>
+        <li>manipulação de blocos em html</li>
+        <li>css</li>
+        <li>html semantico</li>
     </ol>
-    <ul id="licoes_a_aprender">
-        <li>lição 01</li>
-        <li>lição 02</li>
-        <li>lição 03</li>
-        <li>lição 04</li>
-        <li>lição 05</li>
-        <li>lição 01</li>
-        <li>lição 02</li>
-        <li>lição 03</li>
-        <li>lição 04</li>
-        <li>lição 05</li>
+     <ul id="licoes_a_aprender">
+        <li>mongo DB</li>
+        <li>SQL</li>
+        <li>nodeJS</li>
+        <li>arquitetura de software</li>
+        <li>React</li>
+        <li>Jest</li>
+        <li>algoritimos</li>
+        <li>estrutura de dados</li>
+        <li>Ciencias da Computação</li>
+        <li>banco de dados</li>
     </ul>
     </section>
      <footer id="rodape">Todos os direitos reservados Jorge Ramires
