organizando a tag aside

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </article>
             <aside class="texto">
                 <p>
-                    Antes de começar as aulas na Trybe, achei que por saber um pouco sobre o conteúdo inicial nem ia precisar me esforçar, e eu estava muito errado, as aulas são bem explicativas e didáticas, mas a matéria é intensa e estamos sempre aprendendo coisas novas e desafiadoras.
+                    As aulas na Trybe são bem explicativas e didáticas, a matéria é intensa e estamos sempre aprendendo coisas novas e desafiadoras.
                 </p>
             </aside>
         </section>
