--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <li>manipulação de blocos em html</li>
         <li>css</li>
         <li>html semantico</li>
+        <li>função</li>
     </ol>
      <ul id="licoes_a_aprender">
         <li>mongo DB</li>
