--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
       </nav>   
     </header>       
-    <img src="jorge.jpg" id="minha_foto" alt="Jorge Ramires"  width="400px">
+    <img src="jorge.jpg" id="minha_foto" alt="Jorge Ramires"  width="300px">
     <nav>
     <a id="link_externo" href="https://www.uol.com.br/" target="_blank">Uol Noticias</a>
       </nav>
@@ -30,7 +30,7 @@
         </p>
     </article>
     <section>
-        <aside> texto genericotexto genericotexto genericotexto generico texto genericotexto genericotexto genericotexto genericotexto genericotexto generico
+        <aside> <p>um que gostaria de destacar do meu aprendizado desde que comecei seria a cordialidade e presença</p> ativa dos professores e membros da equipe em sanar duvidas isso tem ajudado bastante
         </aside>
         </section>     
          <section>
